[metadata]
name             = hit_acs
version          = 19.1.0
url              = https://github.com/hibtc/hit_acs
description      = Tools for the accelerator control system of the HIT facility.
long_description = file: README.rst, CHANGES.rst
author           = Thomas Gläßle
author_email     = t_glaessle@gmx.de
classifiers      =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics

[options]
packages = hit_acs
zip_safe = True
include_package_data = True
python_requires = >=2.7
install_requires =
    pydicti>=0.0.4
    importlib_resources

[options.entry_points]
gui_scripts =
    hit_acs = hit_acs.gui_wx:main

[bdist_wheel]
universal = 1

[flake8]
# Defaults:
#   ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,W504,W505
#   max-line-length = 79
ignore = E126,E226,E221,E241,W503,W504
max-line-length = 84
max-complexity = 11
exclude = docs,.git,build,__pycache__,dist,hit_models

# Legend:
#   (*  ) = ignored by default
#   (  x) = ignored here
# Rules:
#   (*  ) E121 continuation line under-indented for hanging indent
#   (*  ) E123 closing bracket does not match indentation of opening bracket’s line
#   (* x) E126 continuation line over-indented for hanging indent
#   (*  ) E133 closing bracket is missing indentation
#   (  x) E221 multiple spaces before operator
#   (* x) E226 missing whitespace around arithmetic operator
#   (* x) E241 multiple spaces after ':' [or ',']
#   (*  ) E242 tab after ‘,’
#   (* x) W503 line break before binary operator
#   (* x) W504 line break after binary operator
#   (*  ) W505 doc line too long (82 > 79 characters)
#   (*  ) E704 multiple statements on one line (def)
